--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-background-image: url('img/artiom-vallat-mFrLqRZMx7o-unsplash.jpg');
+background-image: url('https://images.unsplash.com/photo-1593024282550-af02e8726937?ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80');
 background-color: black;
 font-family: "Raleway", Helvetica, sans-serif;
 background-size: cover;
